--- a/APKBUILD.tmpl
+++ b/APKBUILD.tmpl
@@ -5,13 +5,13 @@
 # Maintainer: Oliver Lockwood <olockwood@dalet.com>
 
 pkgname="glibc"
-pkgver="VERSION"
+pkgver="<<VERSION>>"
 pkgrel="0"
 pkgdesc="GNU C Library compatibility layer"
-arch="x86_64"
-url="https://bitbucket.org/ooyalaflex/alpine-glibc-packager"
+arch="<<TARGETARCH>>"
+url="https://github.com/dalet-oss/alpine-glibc"
 license="LGPL"
-source="glibc/glibc-bin-$pkgver-x86_64.tar.gz
+source="glibc/glibc-bin-${pkgver}-${arch}.tar.gz
 ld.so.conf"
 subpackages="$pkgname-bin $pkgname-dev $pkgname-i18n"
 triggers="$pkgname-bin.trigger=/lib:/usr/lib:/usr/glibc-compat/lib"
@@ -29,9 +29,9 @@ package() {
   rm -rf "$pkgdir"/usr/glibc-compat/lib/audit
   rm -rf "$pkgdir"/usr/glibc-compat/share
   rm -rf "$pkgdir"/usr/glibc-compat/var
-  ln -s /usr/glibc-compat/lib/ld-linux-x86-64.so.2 ${pkgdir}/lib/ld-linux-x86-64.so.2
-  ln -s /usr/glibc-compat/lib/ld-linux-x86-64.so.2 ${pkgdir}/lib64/ld-linux-x86-64.so.2
-  ln -s /usr/glibc-compat/lib/ld-linux-x86-64.so.2 ${pkgdir}/usr/glibc-compat/lib64/ld-linux-x86-64.so.2
+  ln -s /usr/glibc-compat/lib/ld-linux-${arch}.so.2 ${pkgdir}/lib/ld-linux-${arch}.so.2
+  ln -s /usr/glibc-compat/lib/ld-linux-${arch}.so.2 ${pkgdir}/lib64/ld-linux-${arch}.so.2
+  ln -s /usr/glibc-compat/lib/ld-linux-${arch}.so.2 ${pkgdir}/usr/glibc-compat/lib64/ld-linux-${arch}.so.2
   ln -s /usr/glibc-compat/etc/ld.so.cache ${pkgdir}/etc/ld.so.cache
 }
 
@@ -50,6 +50,6 @@ i18n() {
 }
 
 sha512sums="
-SHA512SUM  glibc-bin-VERSION-x86_64.tar.gz
-2912f254f8eceed1f384a1035ad0f42f5506c609ec08c361e2c0093506724a6114732db1c67171c8561f25893c0dd5c0c1d62e8a726712216d9b45973585c9f7  ld.so.conf
+SHA512SUM  glibc-bin-<<VERSION>>-<<TARGETARCH>>.tar.gz
+deadbeef0123456789deadbeef0123456789deadbeef0123456789deadbeef0123456789deadbeef0123456789deadbeef0123456789deadbeef012345678900  ld.so.conf
 "
