--- a/APKBUILD.tmpl
+++ b/APKBUILD.tmpl
@@ -8,7 +8,7 @@ pkgname="glibc"
 pkgver="<<VERSION>>"
 pkgrel="0"
 pkgdesc="GNU C Library compatibility layer"
-arch="<<TARGETARCH>>"
+arch="<<ARCH>>"
 url="https://github.com/dalet-oss/alpine-glibc"
 license="LGPL"
 source="glibc/glibc-bin-${pkgver}-${arch}.tar.gz
@@ -50,6 +50,6 @@ i18n() {
 }
 
 sha512sums="
-SHA512SUM  glibc-bin-<<VERSION>>-<<TARGETARCH>>.tar.gz
+<<SHA512SUM>>  glibc-bin-<<VERSION>>-<<ARCH>>.tar.gz
 2912f254f8eceed1f384a1035ad0f42f5506c609ec08c361e2c0093506724a6114732db1c67171c8561f25893c0dd5c0c1d62e8a726712216d9b45973585c9f7  ld.so.conf
 "
